Fixed link alignment in css

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,12 @@ body a { color: gray}
     font-size: 16pt;
     font-family: "Nirmala UI";
 }
-.container-fluid .content a{
+
+p .link {
+color: white;
+}
+
+p .link:hover {
     color: white;
+    background-color: transparent;
 }
